# logging-journald

./: README.md  README.rst  logging_journald.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml  tox.yml
examples/: syslog-receiver.py
tests/: test_handler.py
