[tool.poetry]
name = "logging-journald"
version = "0.6.3"
description = "Pure python logging handler for writing logs to the journald using native protocol"
authors = ["Dmitry Orlov <me@mosquito.su>"]
readme = "README.md"
homepage = "https://github.com/mosquito/logging-journald"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "logging_journald.py" },
]

[tool.poetry.urls]
"Source" = "https://github.com/mosquito/logging-journald"
"Tracker" = "https://github.com/mosquito/logging-journald/issues"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-subtests = "^0.9.0"
aiomisc = "^16.2.10"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
